<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewKeywordActivity">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/display_keyword_textview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_margin="12dp"
        android:scrollbars="vertical"
        android:text="No Keyword Has Been Added" />

</FrameLayout>